# TString

./: .gitignore  CMakeLists.txt  README.md
Code/UniqueNamer/inc/: UniqueNamer.h
Code/UniqueNamer/src/: UniqueNamer.cpp
Code/UniqueString/inc/: UniqueString.h
Code/UniqueString/src/: UniqueString.cpp
Test/: CMakeLists.txt
Test/src/UniqueNamerTests/: UniqueNamerTester.cpp
Test/src/UniqueStringTests/: UniqueStringTester.cpp
